# tower-json-rpc

./: CLAUDE.md  Cargo.toml  README.md
src/: client.rs  error.rs  layer.rs  lib.rs  request.rs  response.rs  server.rs
tower-json-rpc/: Cargo.toml
tower-json-rpc-derive/: Cargo.toml
tower-json-rpc-derive/src/: attributes.rs  helpers.rs  lib.rs  render_client.rs  render_server.rs  rpc_macro.rs
tower-json-rpc-derive/tests/: test_basic.rs  test_simple.rs
tower-json-rpc/examples/: axum_server.rs  client_layer.rs  composed_apis.rs  http_bridge.rs  hyper_http_client.rs  jsonrpc_service.rs  method_guard_layer.rs  typed_requests.rs  ws_subscription_client.rs
tower-json-rpc/src/: client.rs  error.rs  lib.rs  request.rs  server.rs  ws_client.rs
