[package]
name = "tower-json-rpc-derive"
description = "Procedueral macros for tower-json-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
  "extra-traits",
  "full",
  "visit",
  "parsing",
  "printing",
  "clone-impls",
  "proc-macro",
] }
proc-macro-crate = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client", "client-legacy"] }
futures-channel = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
trybuild = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tower = { workspace = true, features = ["util"] }
jsonrpsee-types = { workspace = true }
